<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/app_background">

        <androidx.constraintlayout.widget.ConstraintLayout
            tools:context=".main.ui.AddEditProjectFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputUserName"
                style="@style/TILWhite"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:backgroundTint="@color/white"
                android:textColorHint="@color/black"
                app:boxBackgroundColor="@color/white"
                app:hintEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:prefixText="*"
                app:prefixTextColor="@color/accent_red">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textUserName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/montserrat_semibold"
                    android:hint="@string/proj_time"
                    android:inputType="textShortMessage"
                    android:paddingStart="18dp"
                    android:selectAllOnFocus="true"
                    android:singleLine="true"
                    android:text="@string/name"
                    android:textColor="@color/black"
                    android:textColorHighlight="@color/ripple_red"
                    android:textColorLink="@color/ripple_red"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:id="@+id/linearLayout4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:baselineAligned="false"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/inputUserName">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/inputUserCountry"
                    style="@style/TILWhite"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="4dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/white"
                    android:textColorHint="@color/black"
                    app:boxBackgroundColor="@color/white"
                    app:hintEnabled="false">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/textUserCountry"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/montserrat_semibold"
                        android:gravity="top"
                        android:hint="@string/proj_about"
                        android:inputType="textLongMessage|textMultiLine"
                        android:paddingStart="18dp"
                        android:selectAllOnFocus="true"
                        android:singleLine="false"
                        android:text="@string/country"
                        android:textColor="@color/black"
                        android:textColorHighlight="@color/ripple_red"
                        android:textColorLink="@color/ripple_red" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/inputUserCity"
                    style="@style/TILWhite"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="16dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/white"
                    android:textColorHint="@color/black"
                    app:boxBackgroundColor="@color/white"
                    app:hintEnabled="false">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/textUserCity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat_semibold"
                        android:hint="@string/proj_name"
                        android:inputType="textShortMessage"
                        android:paddingStart="18dp"
                        android:selectAllOnFocus="true"
                        android:singleLine="true"
                        android:text="@string/city"
                        android:textColor="@color/black" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputUserAbout"
                style="@style/TILWhite"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="16dp"
                android:backgroundTint="@color/white"
                android:textColorHint="@color/black"
                app:boxBackgroundColor="@color/white"
                app:hintEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textUserAbout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/montserrat_semibold"
                    android:gravity="top"
                    android:hint="@string/proj_time"
                    android:inputType="textLongMessage|textMultiLine"
                    android:paddingStart="18dp"
                    android:selectAllOnFocus="false"
                    android:singleLine="false"
                    android:text="@string/about_me"
                    android:textColor="@color/black"
                    android:textColorHighlight="@color/ripple_red"
                    android:textColorLink="@color/ripple_red"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardDangerousZone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:cardBackgroundColor="@color/app_background"
                app:cardCornerRadius="12dp"
                app:cardElevation="0dp"
                app:cardForegroundColor="@android:color/transparent"
                app:layout_constraintEnd_toEndOf="@+id/inputUserAbout"
                app:layout_constraintStart_toStartOf="@+id/inputUserAbout"
                app:layout_constraintTop_toBottomOf="@+id/inputUserAbout"
                app:strokeColor="@color/accent_red"
                app:strokeWidth="2dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/textView13"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:fontFamily="@font/montserrat_medium"
                        android:text="@string/dangerous_zone"
                        android:textColor="@color/accent_red"
                        android:textSize="12sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/butDeleteUser"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="32dp"
                        android:layout_marginTop="6dp"
                        android:layout_marginEnd="32dp"
                        android:layout_marginBottom="16dp"
                        android:backgroundTint="@color/accent_red"
                        android:fontFamily="@font/montserrat_semibold"
                        android:paddingTop="12dp"
                        android:paddingBottom="12dp"
                        android:text="@string/delete"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textSize="16sp"
                        app:cornerRadius="44dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView13" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/butCancel"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/cancel"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/butSaveUser"
                app:rippleColor="@color/ripple_red" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/butSaveUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="16dp"
                android:backgroundTint="@color/accent_red"
                android:fontFamily="@font/montserrat_semibold"
                android:paddingStart="44dp"
                android:paddingTop="12dp"
                android:paddingEnd="44dp"
                android:paddingBottom="12dp"
                android:text="@string/save"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textSize="16sp"
                app:cornerRadius="44dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardDangerousZone"
                app:rippleColor="@color/ripple_red" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>